# atv-player

./: .gitignore  README.md  RELEASE_NOTES.md  build.py  pyproject.toml  start.bat  start.sh
.github/workflows/: build.yml
docs/: TODO.md  help.md  python-spider-player-actions.md  python-spider-plugin-development-guide.md
scripts/: build_mpv.sh  release.sh
src/atv_player/: api.py  app.py  builtin_tab_overrides.py  cache_management.py  crash_diagnostics.py  custom_live_service.py  dependency_installer.py  (+24 more)
tests/: conftest.py  secspider_fixtures.py  test_ai_enrichment.py  test_ai_openai_compatible.py  test_ai_search_intent.py  test_api_client.py  test_app.py  test_bilibili_controller.py  test_bluray_iso.py  test_browse_controller.py  test_browse_page_ui.py  test_build.py  test_build_mpv_script.py  test_cache_management.py  test_classic_home_page.py  test_crash_diagnostics.py  test_custom_live_service.py  test_danmaku_bilibili_provider.py  test_danmaku_cache.py  test_danmaku_iqiyi_provider.py  test_danmaku_mgtv_provider.py  test_danmaku_migu_provider.py  test_danmaku_provider_concurrency.py  test_danmaku_renren_provider.py  test_danmaku_service.py  test_danmaku_sohu_provider.py  test_danmaku_subtitle.py  test_danmaku_tencent_provider.py  test_danmaku_utils.py  test_danmaku_youku_provider.py  test_dependency_installer.py  test_diagnostics.py  test_direct_parse_danmaku.py  test_douban_controller.py  test_emby_controller.py  test_episode_titles.py  test_favorite_tmdb_bindings.py  test_favorites_controller.py  test_favorites_page_ui.py  test_favorites_repository.py  (+96 more)
(+439 files in other folders)
